Removed rspec and added minitest as test framework. Added first basic tests.

--- a/test/fixtures/categories.yml
+++ b/test/fixtures/categories.yml
@@ -8,6 +8,9 @@
 #  updated_at :datetime         not null
 #
 
-class Category < ActiveRecord::Base
-  has_many :videos, -> { order("title") }
-end
+
+comedies:
+  name: TV Comedies
+
+tvshows: 
+  name: TV Shows
