--- a/test/fixtures/videos.yml
+++ b/test/fixtures/videos.yml
@@ -23,19 +23,54 @@
 monk: 
   title: Monk
   description: Adrian Monk is a brilliant San Francisco detective, whose obsessive compulsive disorder just happens to get in the way.
-  category: tvshows
+  category: comedy
 
 family_guy:
   title: Family Guy
   description: In a wacky Rhode Island town, a dysfunctional family strive to cope with everyday life as they are thrown from one crazy scenario to another.
-  category: comedies
+  category: animation
 
 futurama: 
   title: Futurama
   description: "Fry, a pizza guy is accidentally frozen in 1999 and thawed out New Year's Eve 2999."
-  category: comedies
+  category: animation
 
 south_park:
   title: South Park
   description: Follows the misadventures of four irreverent grade-schoolers in the quiet, dysfunctional town of South Park, Colorado.
-  category: comedies
+  category: animation
+
+star_wars_iv:
+  title: Star Wars
+  description: "Luke Skywalker joins forces with a Jedi Knight, a cocky pilot, a wookiee and two droids to save the universe from the Empire's world-destroying battle-station, while also attempting to rescue Princess Leia from the evil Darth Vader."
+  category: fantasy
+
+star_wars_v: 
+  title: "Star Wars: The Empire Strikes Back"
+  description: "After the rebels have been brutally overpowered by the Empire on their newly established base, Luke Skywalker takes advanced Jedi training with Master Yoda, while his friends are pursued by Darth Vader as part of his plan to capture Luke."
+  category: fantasy
+
+star_wars_vi: 
+  title: "Star Wars: Return of the Jedi"
+  description: "After rescuing Han Solo from the palace of Jabba the Hutt, the rebels attempt to destroy the second Death Star, while Luke struggles to make Vader return from the dark side of the Force."
+  category: fantasy
+
+toy_story:
+  title: Toy Story
+  description: "A cowboy doll is profoundly threatened and jealous when a new spaceman figure supplants him as top toy in a boy's room."
+  category: animation
+
+toy_story_2:
+  title: Toy Story 2
+  description: "When Woody is stolen by a toy collector, Buzz and his friends vow to rescue him, but Woody finds the idea of immortality in a museum tempting."
+  category: animation
+
+toy_story_3:
+  title: Toy Story 3
+  description: "The toys are mistakenly delivered to a day-care center instead of the attic right before Andy leaves for college, and it's up to Woody to convince the other toys that they weren't abandoned and to return home."
+  category: animation
+
+simpsons:
+  title: The Simpsons
+  description: "The satiric adventures of a working-class family in the misfit city of Springfield."
+  category: animation
